--- a/LaTeX/paper.tex
+++ b/LaTeX/paper.tex
@@ -46,6 +46,9 @@ A Mixed Strategy Game within this paper refers to a subset of strategic games wi
 
 Figure \ref{fig:1} shows an example of how payoffs could be calculated for each player. Players $1$ and $2$ make moves $P_1$ and $P_2$, respectively. Thus, the players will recieve scores $M_{<1,2>}=3$ and $M_{<2,1>}=3$, respectively.
 
+\section{Results}
+
+Our preliminary testing with a brain size of one or two, and a 2x2 matrix showed little variation in the strategies used by the AI in order to be the most dominant species in that generation. After increasing the brain size to five and experimenting with different matrix sizes (i.e 2x3, 2x4, 3x3), we found that it took approximately 1000 to 2000 generations for the AI to develop a consistent optimal strategy. By adding bots that produced random strategies each generation, caused variations in the data and created outliers. In the earlier generations, there were slight discrepancies because of this, however, on average it did not affect the 50th percentile data. In the later generations once an efficient strategy emerged, these variations hardly affected the mean. 
 
 
 \end{document}
